add home blueprint
* add form in nav

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="col">
-       {% include "portfolio.html" %}
+       {% include "shared/portfolio.html" %}
     </div>
 </div>
 {% endblock %}
