--- a/templates/stock/quote.html
+++ b/templates/stock/quote.html
@@ -8,7 +8,7 @@
         <h2> Price: ${{ stock_price | round(2, 'floor') }} </h2>
     </div>
     <div class="col">
-        {% include "portfolio.html" %}
+        {% include "shared/portfolio.html" %}
     </div>
 </div>
 {% endblock %}
