--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -4,22 +4,29 @@
     <meta charset="UTF-8">
     <title>{% block title %}View Stock Price{% endblock %} - Stock App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          crossorigin="anonymous">
 </head>
 <body>
 
-    <nav class="navbar navbar-light bg-light justify-content-between">
-            <a href="{{ url_for('home_page') }}" class="navbar-brand">Stock App</a>
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item {% if request.url_rule.endpoint == 'home_page' %} active {% endif %}">
-                    <a href="{{ url_for('home_page') }}" class="nav-link">Home</a>
-                </li>
-            </ul>
-    </nav>
+<nav class="navbar navbar-light bg-light justify-content-between">
+    <a href="{{ url_for('home.home_page') }}" class="navbar-brand">Stock App</a>
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item {% if request.url_rule.endpoint == 'home_page' %} active {% endif %}">
+            <a href="{{ url_for('home.home_page') }}" class="nav-link">Home</a>
+        </li>
+    </ul>
 
-    <div class="container mt-3">
-        {% block content %}{% endblock %}
-    </div>
+    <form class="form-inline" method="post" action="{{ url_for('home.lookup') }}">
+        <input class="form-control mr-sm-2" type="input" name="ticker" placeholder="AAPL" aria-label="Lookup">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Lookup</button>
+    </form>
+
+</nav>
+
+<div class="container mt-3">
+    {% block content %}{% endblock %}
+</div>
 
 </body>
 </html>
